see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-Sep-2011 Mark Dexter
 # [#25471] JUpdate target platform test
 # [#26781] Sync more changes form platform 11.2

17-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: nl-NL
 # [#26814] [#26423] com contact - rendered extra string via var_dump(). Thanks Peter.
 # [#26792] Modules position filter looks odd and behaves wrongly in modules view. Thanks Elin and Dennis. Includes joomla.sql and 170to171.sql updates

16-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: et-ET, he-IL, tr-TR
 $ Updating installation ini files: gd-GB
 $ Updating installation ini files: az-AZ

15-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: ro-RO, fa-IR, fr-FR
 $ Updating installation ini files: ca-ES, th-TH

14-Sep-2011 Mark Dexter
 # [#26423] com contact -- add finishing touches to sortname fields*
 # [#26542] Modules manager showing error of undefined constant COM_MODULES_ERR_XML
 # [#26498] Beez 5 default values
 # [#26534] Make the installation more suitable for smaller screens
 # Follow-up patch to [#26784] New Multilanguage Status module to fix database update

14-Sep-2011 Jean-Marie Simonet
 #$ Updating installation ini files: ckb-IQ, ja-JP, km-KH, pl-PL, ru-RU, ta-IN
 # Updating admin en-GB.xml for new ini files
 $ Improving mod_languages and languagefilter plugin xml ini files descriptions

13-Sep-2011 Mark Dexter
 # Fix inconsistent datatype in database update script
 # Fix typo in sample data
 # Reverted [#26423] because it broke two system tests
 # [#26784] New Multilanguage Status module

13-Sep-2011 Jean-Marie Simonet