@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+18-Sep-2011 Jean-Marie Simonet
+ # [#26827] Loadmodule plugin ignores its style setting. Thanks Elin
+ 
 17-Sep-2011 Mark Dexter
  # [#25471] JUpdate target platform test
  # [#26781] Sync more changes form platform 11.2
